update：增加新的章节

--- a/01_R语言入门.qmd
+++ b/01_R语言入门.qmd
@@ -1,9 +1,34 @@
 # R语言入门
 
+```{r}
+message("Hello friend. Welcome to the world of R language!")
+```
+欢迎来到R语言的世界！R语言，一种广泛用于统计计算和图形的编程语言，已经成为数据科学家和统计学家的首选工具之一（另一个是大家更为熟知的Python😂）。
+
+当你运行上面的代码，你会看到一个友好的欢迎消息。这只是开始，让我们深入了解R语言的世界。
+
 ## R语言历史
 
-## R语言适合做什么
+R语言的起源可以追溯到1976年，当时它是由新西兰的Ross Ihaka和Robert Gentleman在奥克兰大学开发的。它是S语言的一个实现，S语言是由贝尔实验室的John Chambers和同事们在1976年开发的。在R语言的源代码中还有很多S语言的留存代码，后面我们会时不时深入了解一下R语言的具体实现。
 
-## R语言不足的地方
+:::{.callout-note}
+不用担心，我们不必去学习其中的C语言和Fortran代码。
+:::
 
-## 怎么学好一门编程语言
+R语言的名字来源于其创始人的名字首字母。
+
+R语言的开发是为了提供一个免费、开源的统计计算环境，它不仅仅是一个编程语言，还包括了一个高效的数据存储和处理工具，以及一套广泛的统计和图形功能。
+
+## 谁在使用R语言
+
+R语言在学术界和工业界都得到了广泛的应用。许多研究者使用R进行统计分析和数据可视化。在工业界，尤其是在金融、生物技术、市场研究和社交媒体领域，R语言也得到了广泛的应用。
+
+:::{.callout-note}
+国内同学，尤其是学习生物、医学的同学可能有更深的体会。
+:::
+
+得益于它的易扩展性，大公司如Google, Facebook, Airbnb和New York Times都在使用R语言进行数据分析。此外，R语言的社区也非常活跃，有数千个扩展包，涵盖了从生态学到金融的各种领域。
+
+## 为什么需要编程
+
+## 如何解题
