update：正在写作第三章代码 & 脚本 & 项目

--- a/02_如何解题.qmd
+++ b/02_如何解题.qmd
@@ -1,5 +1,7 @@
 # 如何解题
 
+<a name="header"></a>
+
 ## How to Solve It
 《How to Solve It》是由匈牙利数学家George Pólya于1945年出版的一本数学教育书籍。
 这本书主要关注解决数学问题的一般方法和思考过程，而不仅仅是特定数学问题的解决方案。
@@ -68,3 +70,5 @@ Fourth. Examine the solution obtained.
 在每一步的基础上，我们不断深入问题的本质。
 最后再回到原问题，看看有没有得到解决。在此基础上，我们可以提出新的问题，或者改进解决方案。
 重复这个过程，不过问题越辩越明，我们的思路也不断得到扩展，解决问题的能力也会得到提升。
+
+[⇧](#header)
