update：完成“脚本文件（Script）”

--- a/03_代码及其他.qmd
+++ b/03_代码及其他.qmd
@@ -4,7 +4,9 @@
 
 ## 有什么区别吗
 大家可能会有疑问，为什么一本R语言教程，怎么现在还没开始讲R语言呢？
+
 因为主要是面向非程序员的，所以在正式学习R语言之前，我们需要先了解一些基本的概念，比如代码、脚本和项目。
+
 这些概念在编程中非常重要，同时也是我们学习R语言的基础。
 
 
@@ -56,39 +58,109 @@ for (i in seq(len = n)) {
 
 遵循这些准则可以提高代码片段的质量，使其更易于理解和维护。
 
-## 脚本（Script）
+## 脚本文件（Script）
 
 脚本是一组预编写的代码，用于自动执行一系列任务。
 
 - **特点**：
   - 通常用于数据处理、文件操作等。
   - 可以由多个函数和代码块组成。
-  - 通常是单个文件，如 `.R` 文件。
+  - 通常是单个文件，如 `.R`^[.R或者.r文件，两者都是R语言源文件后缀名。使用的时候并没有严格区分。实际上，任何后缀名的文本文件都可以。。。] 文件。
 
-- **脚本.r文件怎么组织好代码**
+* 下面的示例是读取日本人口变化数据^[日本政府統計の総合窓口<https://www.e-stat.go.jp/>，数据更新很及时，感兴趣可以自己研究研究。]，抽取其中年度人口总数的数据，并绘制折线图。
 
-  1. **注释和文档**：文件开头添加脚本的目的和用法。
-  2. **导入库**：将所有需要的库放在文件开头。
-  3. **全局变量**：定义所有全局变量。
-  4. **函数定义**：定义所有函数。
-  5. **主代码块**：使用 `if(main)` 或直接在脚本底部添加主代码块。
+:::{.callout-note}
+完整文件参见`src/03/plot_population.r`。
+:::
 
-```r
-# 脚本说明
-library(dplyr)
+```{r}
+library(knitr) # 加载knitr包
 
-# 全局变量
-total <- 0
-
-# 函数定义
-add <- function(a, b) {
-  return(a + b)
-}
-
-# 主代码块
-total <- add(5, 10)
-print(total)
+# 读取数据
+fn <- "data/03/年齢（５歳階級），男女別人口－全国（大正９年～平成27年）.csv"
+d <- read.csv(fn, fileEncoding = "cp932") # 读取日文、中文等非英文字符可能需要指定编码
 ```
+
+```{r}
+# 查看数据特征
+str(d)
+```
+
+```{r}
+# 查看前几行数据
+knitr::kable(head(d))
+```
+
+```{r}
+# 获取年度及人口总数
+dd <- d[d$年齢5歳階級 == "総数", c("西暦.年.", "人口.総数.")]
+```
+
+```{r}
+# 绘制折线图
+# 设置字体 注意⚠️：这里使用的是日文的字体，不同操作系统可能还有区别，需要自行调整
+par(family = "HiraKakuProN-W3") 
+plot(dd$西暦.年., dd$人口.総数.,
+    type = "l",
+    col = "blue",
+    xlab = "年", ylab = "人口総数",
+    main = "年推移日本人口総数の変化"
+)
+
+# 添加人口变化值
+par(new = TRUE)
+plot(dd$西暦.年., c(NA, diff(dd$人口.総数.)), 
+    type = "l", col = "red",
+    xlab = "", ylab = "", axes = FALSE
+)
+axis(4) # 添加右侧的y轴
+mtext("人口総数の変化値", side = 4, line = -1.5) # 添加右侧y轴的标签
+
+# 添加图例
+legend("bottom",
+    lty = 1,
+    legend = c("人口総数", "人口総数の変化値"), 
+    col = c("blue", "red")
+)
+```
+
+:::{.callout-tip}
+为了提高代码的可读性、可维护性和可重用性，
+下面是一些在`.R`文件里组织好代码的最佳实践。
+:::
+
+(@) 添加注释和文档
+
+(@) 使用合适的命名约定
+
+- 使用有意义的变量名和函数名。
+- 遵循一致的命名约定，例如使用下划线分隔符（`open_dir`）。
+
+(@) 分段和分节
+
+- 使用空行和注释来分隔代码的不同部分或功能区块。
+
+(@) 将代码分解为函数和代码块
+
+- 将重复或可重用的代码段封装成函数。
+- 如果可能，将相关的函数和代码块放在一起。
+
+(@) 按逻辑顺序组织代码
+
+- 通常，数据导入和清洗应该在文件的顶部，而分析和可视化应该在后面。
+
+(@) 避免硬编码
+
+- 使用变量而不是硬编码的数值。
+
+(@) 使用版本控制
+
+- 使用版本控制系统（如Git）来跟踪代码的变更。
+
+(@) 代码测试和检查
+- 在`if (FALSE) { }`代码块里测试代码。
+
+在后面的章节里，我们会不断践行这些最佳实践。
 
 ## 项目（Project）
 
@@ -106,11 +178,13 @@ print(total)
 1. **目录结构**：有组织的文件和文件夹结构。
     - `/lib`：      常用代码库
     - `/src`：      源代码
+    - `/def`：      配置文件(函数需要复杂配置时使用)
+    - `/etc`：      其他文件
     - `/data`：     数据源文件(csv等)
     - `/rdata`：    输出的数据文件(RData等)
     - `/out`：      输出的图片、报告等
-    - `/docs`：     文档(非程序生成的文档)
-    - `/tests`：    测试代码
+    - `/doc`：     文档(非程序生成的文档)
+    - `/test`：    测试代码
 2. **版本控制**：使用 Git 进行版本控制。
 3. **README**：添加 README 文件，解释项目的目的、安装、使用等。
 
