update：整理文档和网页式样

--- a/01_R语言入门.qmd
+++ b/01_R语言入门.qmd
@@ -5,9 +5,9 @@
 ```{r}
 message("Hello friend. Welcome to the world of R language!")
 ```
-欢迎来到R语言的世界！R语言，一种广泛用于统计计算和图形的编程语言，已经成为数据科学家和统计学家的首选工具之一^[另一个是大家更为熟知的Python。]。
 
-当你运行上面的代码，你会看到一个友好的欢迎消息。这只是开始，让我们深入了解R语言的世界。
+欢迎来到R语言的世界！
+R语言，一种广泛用于统计计算和图形的编程语言，已经成为数据科学家和统计学家的首选工具之一^[另一个是大家更为熟知的Python。]。
 
 ## R语言历史
 
