update：修正错别字

--- a/02_如何解题.qmd
+++ b/02_如何解题.qmd
@@ -70,7 +70,7 @@ Fourth. Examine the solution obtained.
 但是现实的问题可能很复杂，我们需要自己不断地将问题分解、细化，然后一步一步坚实地解决每一个子问题或者类似的问题。
 在每一步的基础上，我们不断深入问题的本质。
 最后再回到原问题，看看有没有得到解决。在此基础上，我们可以提出新的问题，或者改进解决方案。
-重复这个过程，不过问题越辩越明，我们的思路也不断得到扩展，解决问题的能力也会得到提升。
+重复这个过程，不仅问题是被越辩越明，我们的思路也不断得到扩展，最终自己解决问题的能力也会得到提升。
 
 说实话，我也是工作之后才读到这本书，相见恨晚。
 在解决实际课题的时候，我的桌旁总是放着这本书，时不时翻翻，总能有所收获。
